recursion.lessons.recursion.tree.Tree.scala.error
Tree:11: error: identifier expected but integer literal found.
		allervers(x:350,y:236)
                            ^Tree:13: error: ')' expected but '}' found.
	}
        ^